--- a/Style/G3.css
+++ b/Style/G3.css
@@ -7,3 +7,51 @@
   font-weight: 400;
   font-style: normal;
 }
+
+
+/* shared styles */
+.display-flex{
+    display: flex;
+}
+/* darik 02 */
+.text-gray{
+    color: #424242;
+}
+
+/* dark03 */
+
+.text-light-gray{
+    color: #727272 ;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+/* header styles */
+
+
+/* Navbar related styles */
+.navbar{
+    justify-content: space-between;
+    align-items: center ;
+}
+
+.brand{
+    font-weight: bold;
+    font-size: 2.8em;
+}
+
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight:  500px;
+    color: ;
+}
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
