--- a/Style/G3.css
+++ b/Style/G3.css
@@ -13,6 +13,15 @@
 .display-flex{
     display: flex;
 }
+.btn-primary{
+    background-color: #ff900e;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25em;
+    font-weight: 600;
+    border-radius: 8px;
+    border: 0px;
+}
 /* darik 02 */
 .text-gray{
     color: #424242;
@@ -54,4 +63,24 @@
 .navbar, .banner{
     max-width: 1440px;
     margin: 0 auto;
+}
+/* banner related styles */
+.banner-content{
+    max-width:  850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight:  700;
+    font-size: 4em;
+}
+.banner-img{
+    width: 100%;
+}
+/* responsive media query */
+@media screen and (max-width: 576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
 }
