--- a/Style/G3.css
+++ b/Style/G3.css
@@ -7,12 +7,25 @@
   font-weight: 400;
   font-style: normal;
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
 
+main > section {
+    margin-top: 130px;
+}
 
 /* shared styles */
+.section-tittle{
+    font-size: 2.8em;
+    font-weight: 700;
+}
+
 .display-flex{
     display: flex;
 }
+
 .btn-primary{
     background-color: #ff900e;
     color: white;
@@ -21,6 +34,9 @@
     font-weight: 600;
     border-radius: 8px;
     border: 0px;
+}
+.text-primary{
+    color: #ff900e;
 }
 /* darik 02 */
 .text-gray{
@@ -78,9 +94,48 @@
 .banner-img{
     width: 100%;
 }
+/* team and feature styles */
+.teams{
+    align-items: center;
+
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+}
+#quick-list{
+    font-weight: 500;
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links{
+    .navbar,
+    .nav-links, 
+    .teams{
         flex-direction: column;
+    }
+
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left:20px ;
+    }
+}
+
+/* medium size device  */
+@media screen and (min-width : 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin-left: 50px;
     }
 }
