--- a/Style/G3.css
+++ b/Style/G3.css
@@ -114,7 +114,32 @@ main > section {
 #quick-list{
     font-weight: 500;
 }
+/* features section releted style */
+.feature{
+    gap: 140px;
+}
+    
 
+    
+
+#feature-section-titlle{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+.feature-card {
+  padding: 30px;
+  border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0,0,0,0.6);
+    margin-bottom: 20px;
+    
+}
+.feature-card ,.feature-tittle{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
+}
 /* some facts related styles */
 .facts-container{
     display: grid;
